--- a/Prover.Client/MainWindow.xaml
+++ b/Prover.Client/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow"
-        Width="525"
-        Height="350">
-    <Grid />
+        Width="529"
+        Height="419">
+    <Grid Margin="0,0,2,3" />
 </Window>
