--- a/Prover.Client/Windows/MainWindow.xaml
+++ b/Prover.Client/Windows/MainWindow.xaml
@@ -3,7 +3,17 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        Title="DAM Prover"
+        xmlns:prism="http://www.codeplex.com/prism"
+        xmlns:regions="clr-namespace:Prover;assembly=Prover"
+        Title="Prover"
         mc:Ignorable="d">
-    <Grid />
+    <Grid Background="#FF200074">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="4*" />
+        </Grid.RowDefinitions>
+        <ContentControl Grid.Row="1" prism:RegionManager.RegionName="{x:Static regions:RegionNames.ToolbarRegion}" />
+        <ContentControl Grid.Row="2" prism:RegionManager.RegionName="{x:Static regions:RegionNames.ContentRegion}" />
+
+    </Grid>
 </Window>
