--- a/Prover.Client/Windows/MainWindow.xaml
+++ b/Prover.Client/Windows/MainWindow.xaml
@@ -8,12 +8,49 @@
         Title="Prover"
         mc:Ignorable="d">
     <Grid Background="#FF200074">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
-            <RowDefinition Height="4*" />
-        </Grid.RowDefinitions>
-        <ContentControl Grid.Row="1" prism:RegionManager.RegionName="{x:Static regions:RegionNames.ToolbarRegion}" />
-        <ContentControl Grid.Row="2" prism:RegionManager.RegionName="{x:Static regions:RegionNames.ContentRegion}" />
+        <DockPanel>
+            <Grid HorizontalAlignment="Stretch" DockPanel.Dock="Top">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <WrapPanel Grid.Column="0" Orientation="Horizontal">
+                    <Button Command="" CommandParameter="">
+                        <Button.Content>
+                            <Border Width="64"
+                                    Height="64"
+                                    BorderThickness="1"
+                                    Opacity="1"
+                                    RenderTransformOrigin="0.5,0.5">
+                                <Image Margin="4"
+                                       Source="/Prover.Client;component/Resources/Home.png"
+                                       Stretch="Uniform" />
+                            </Border>
+                        </Button.Content>
+                    </Button>
+                </WrapPanel>
+                <WrapPanel Grid.Column="1"
+                           HorizontalAlignment="Right"
+                           Orientation="Horizontal">
+                    <Button Command="" CommandParameter="">
+                        <Button.Content>
+                            <Border Width="64"
+                                    Height="64"
+                                    BorderThickness="1"
+                                    Opacity="1"
+                                    RenderTransformOrigin="0.5,0.5">
+                                <Image Margin="4"
+                                       Source="/Prover.Client;component/Resources/Settings2.png"
+                                       Stretch="Uniform" />
+                            </Border>
+                        </Button.Content>
+                    </Button>
+                </WrapPanel>
+            </Grid>
+            <Grid DockPanel.Dock="Bottom">
+                <ContentControl Grid.Row="2" prism:RegionManager.RegionName="{x:Static regions:RegionNames.ContentRegion}" />
+            </Grid>
 
+        </DockPanel>
     </Grid>
 </Window>
