--- a/Prover.Instruments/Views/ToolbarView.xaml
+++ b/Prover.Instruments/Views/ToolbarView.xaml
@@ -6,5 +6,110 @@
              d:DesignHeight="300"
              d:DesignWidth="300"
              mc:Ignorable="d">
-    <Button Content="View Instruments" />
+    <StackPanel>
+        <Label HorizontalAlignment="Center"
+               VerticalAlignment="Center"
+               FontSize="22"
+               Foreground="White">
+            Instruments
+        </Label>
+        <Grid Margin="10">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="auto" />
+            </Grid.RowDefinitions>
+
+            <TextBlock Grid.Row="1"
+                       Grid.Column="0"
+                       Margin="0,10,0,0"
+                       HorizontalAlignment="Center"
+                       FontFamily="Arial"
+                       FontSize="16"
+                       FontWeight="Regular"
+                       Foreground="AliceBlue"
+                       Text="Test"
+                       TextWrapping="Wrap" />
+            <Grid Grid.Column="0" HorizontalAlignment="Center">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <TextBlock x:Name="NotificationCountTextBlock"
+                           Grid.Row="0"
+                           Grid.Column="0"
+                           Margin="0"
+                           VerticalAlignment="Center"
+                           FontSize="60"
+                           Foreground="White"
+                           Padding="0"
+                           RenderTransformOrigin="0.5,0.5"
+                           Text="Test"
+                           Visibility="Collapsed">
+                    <TextBlock.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform ScaleX="0" />
+                            <SkewTransform />
+                            <RotateTransform />
+                            <TranslateTransform />
+                        </TransformGroup>
+                    </TextBlock.RenderTransform>
+                </TextBlock>
+                <Image Grid.Row="0"
+                       Grid.Column="1"
+                       Width="75"
+                       Height="75"
+                       Source="/Prover.Instruments;component/Themes/Test.png" />
+            </Grid>
+        </Grid>
+        <Grid Margin="10">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="auto" />
+            </Grid.RowDefinitions>
+
+            <TextBlock Grid.Row="1"
+                       Grid.Column="0"
+                       Margin="0,10,0,0"
+                       HorizontalAlignment="Center"
+                       FontFamily="Arial"
+                       FontSize="16"
+                       FontWeight="Regular"
+                       Foreground="AliceBlue"
+                       Text="Search"
+                       TextWrapping="Wrap" />
+
+            <Grid Grid.Column="0" HorizontalAlignment="Center">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Row="0"
+                           Grid.Column="0"
+                           Margin="0"
+                           VerticalAlignment="Center"
+                           FontSize="60"
+                           Foreground="White"
+                           Padding="0"
+                           RenderTransformOrigin="0.5,0.5"
+                           Text="Search"
+                           Visibility="Collapsed">
+                    <TextBlock.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform ScaleX="0" />
+                            <SkewTransform />
+                            <RotateTransform />
+                            <TranslateTransform />
+                        </TransformGroup>
+                    </TextBlock.RenderTransform>
+                </TextBlock>
+                <Image Grid.Row="0"
+                       Grid.Column="1"
+                       Width="75"
+                       Height="75"
+                       Source="/Prover.Instruments;component/Themes/search.png" />
+            </Grid>
+        </Grid>
+
+    </StackPanel>
+
 </UserControl>
