--- a/Prover.Instruments.Search/Views/InstrumentsListPage.xaml
+++ b/Prover.Instruments.Search/Views/InstrumentsListPage.xaml
@@ -81,13 +81,15 @@
         </Style>
     </UserControl.Resources>
 
-
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="9*" />
+            <RowDefinition Height="2*" />
         </Grid.RowDefinitions>
-        <StackPanel Margin="10, 0, 0, 0" Orientation=" Horizontal">
+        <StackPanel Grid.Row="0"
+                    Margin="10, 0, 0, 0"
+                    Orientation=" Horizontal">
             <Button Command="{Binding OneWeekFilterCommand}" Style="{StaticResource Flat}">Last 7 Days</Button>
             <Button Command="{Binding OneMonthFilterCommand}" Style="{StaticResource Flat}">Last 30 Days</Button>
             <TextBox x:Name="SerialNumber"
@@ -99,12 +101,11 @@
 
             <!--  <TextBlock HorizontalAlignment="Right">Serial Number:</TextBlock>  -->
         </StackPanel>
-        <Grid Grid.Row="2">
+        <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
             <ListBox Name="InstrumentList"
-                     Grid.Row="2"
                      Margin="10"
                      HorizontalContentAlignment="Stretch"
                      VerticalContentAlignment="Stretch"
@@ -117,7 +118,6 @@
                                             ElementName=InstrumentsList,
                                             Mode=TwoWay}" />
 
-
             <!--  Details  -->
             <!--
                 <views:InstrumentDetails Grid.Column="2"
@@ -126,5 +126,8 @@
             -->
         </Grid>
 
+        <Button Grid.Row="2"
+                Command="{Binding AddNewTestCommand}"
+                Content="Add New" />
     </Grid>
 </UserControl>
