--- a/Prover.Client/Reports/Instrument.rdlc
+++ b/Prover.Client/Reports/Instrument.rdlc
@@ -2,25 +2,55 @@
 <Report xmlns="http://schemas.microsoft.com/sqlserver/reporting/2008/01/reportdefinition" xmlns:rd="http://schemas.microsoft.com/SQLServer/reporting/reportdesigner">
   <Body>
     <ReportItems>
-      <Textbox Name="data">
+      <Textbox Name="Key">
         <CanGrow>true</CanGrow>
         <KeepTogether>true</KeepTogether>
         <Paragraphs>
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>=First(Fields!data.Value, "DataSet1")</Value>
+                <Value>=Sum(Fields!Key.Value, "Instrument_ItemFile")</Value>
                 <Style />
               </TextRun>
             </TextRuns>
             <Style />
           </Paragraph>
         </Paragraphs>
-        <rd:DefaultName>data</rd:DefaultName>
-        <Top>1.36333in</Top>
+        <rd:DefaultName>Key</rd:DefaultName>
+        <Top>1.68277in</Top>
         <Left>0.39458in</Left>
         <Height>0.25in</Height>
-        <Width>5.71875in</Width>
+        <Width>1in</Width>
+        <Style>
+          <Border>
+            <Style>None</Style>
+          </Border>
+          <PaddingLeft>2pt</PaddingLeft>
+          <PaddingRight>2pt</PaddingRight>
+          <PaddingTop>2pt</PaddingTop>
+          <PaddingBottom>2pt</PaddingBottom>
+        </Style>
+      </Textbox>
+      <Textbox Name="Value">
+        <CanGrow>true</CanGrow>
+        <KeepTogether>true</KeepTogether>
+        <Paragraphs>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value>=First(Fields!Value.Value, "Instrument_ItemFile")</Value>
+                <Style />
+              </TextRun>
+            </TextRuns>
+            <Style />
+          </Paragraph>
+        </Paragraphs>
+        <rd:DefaultName>Value</rd:DefaultName>
+        <Top>1.68277in</Top>
+        <Left>1.46402in</Left>
+        <Height>0.25in</Height>
+        <Width>1in</Width>
+        <ZIndex>1</ZIndex>
         <Style>
           <Border>
             <Style>None</Style>
@@ -32,10 +62,10 @@
         </Style>
       </Textbox>
     </ReportItems>
-    <Height>2in</Height>
+    <Height>2.155in</Height>
     <Style />
   </Body>
-  <Width>6.5in</Width>
+  <Width>8.33208in</Width>
   <Page>
     <LeftMargin>1in</LeftMargin>
     <RightMargin>1in</RightMargin>
@@ -52,59 +82,91 @@
       </ConnectionProperties>
       <rd:DataSourceID>1a573656-9a54-49ee-9270-daacb708fab5</rd:DataSourceID>
     </DataSource>
+    <DataSource Name="ProverInstrumentsData">
+      <ConnectionProperties>
+        <DataProvider>System.Data.DataSet</DataProvider>
+        <ConnectString>/* Local Connection */</ConnectString>
+      </ConnectionProperties>
+      <rd:DataSourceID>99d9f6a6-1278-4442-b64e-a17ec6f581d5</rd:DataSourceID>
+    </DataSource>
+    <DataSource Name="ProverInstrumentsData1">
+      <ConnectionProperties>
+        <DataProvider>System.Data.DataSet</DataProvider>
+        <ConnectString>/* Local Connection */</ConnectString>
+      </ConnectionProperties>
+      <rd:DataSourceID>adbcdd16-e18c-4ab0-88f6-0b15201ee649</rd:DataSourceID>
+    </DataSource>
   </DataSources>
   <DataSets>
-    <DataSet Name="DataSet1">
+    <DataSet Name="Instrument">
       <Query>
-        <DataSourceName>ProverModel</DataSourceName>
+        <DataSourceName>ProverInstrumentsData</DataSourceName>
         <CommandText>/* Local Query */</CommandText>
       </Query>
       <Fields>
-        <Field Name="approver">
-          <DataField>approver</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
-        </Field>
-        <Field Name="customer_id">
-          <DataField>customer_id</DataField>
-          <rd:TypeName>System.Nullable`1[[System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089]]</rd:TypeName>
-        </Field>
-        <Field Name="data">
-          <DataField>data</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
-        </Field>
-        <Field Name="date">
-          <DataField>date</DataField>
+        <Field Name="CreatedDate">
+          <DataField>CreatedDate</DataField>
           <rd:TypeName>System.Nullable`1[[System.DateTime, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089]]</rd:TypeName>
         </Field>
-        <Field Name="inspection_id">
-          <DataField>inspection_id</DataField>
+        <Field Name="ID">
+          <DataField>ID</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="InspectionID">
+          <DataField>InspectionID</DataField>
           <rd:TypeName>System.Nullable`1[[System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089]]</rd:TypeName>
         </Field>
-        <Field Name="instr_id">
-          <DataField>instr_id</DataField>
+        <Field Name="InstrumenGuID">
+          <DataField>InstrumenGuID</DataField>
           <rd:TypeName>System.Guid</rd:TypeName>
         </Field>
-        <Field Name="instr_type_id">
-          <DataField>instr_type_id</DataField>
-          <rd:TypeName>System.Nullable`1[[System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089]]</rd:TypeName>
+        <Field Name="InstrumentDriveType">
+          <DataField>InstrumentDriveType</DataField>
+          <rd:TypeName>Prover.IBaseInstrument+DriveType</rd:TypeName>
         </Field>
-        <Field Name="meter_index_id">
-          <DataField>meter_index_id</DataField>
-          <rd:TypeName>System.Nullable`1[[System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089]]</rd:TypeName>
+        <Field Name="InstrumentType">
+          <DataField>InstrumentType</DataField>
+          <rd:TypeName>miSerialProtocol.InstrumentTypeCode</rd:TypeName>
         </Field>
-        <Field Name="pass">
-          <DataField>pass</DataField>
-          <rd:TypeName>System.Nullable`1[[System.Byte, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089]]</rd:TypeName>
+        <Field Name="PulseASelect">
+          <DataField>PulseASelect</DataField>
+          <rd:TypeName>Prover.IBaseInstrument+PulseOutputValues</rd:TypeName>
         </Field>
-        <Field Name="serial_number">
-          <DataField>serial_number</DataField>
+        <Field Name="PulseBSelect">
+          <DataField>PulseBSelect</DataField>
+          <rd:TypeName>Prover.IBaseInstrument+PulseOutputValues</rd:TypeName>
+        </Field>
+        <Field Name="SerialNumber">
+          <DataField>SerialNumber</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
       </Fields>
       <rd:DataSetInfo>
-        <rd:DataSetName>Prover.Model</rd:DataSetName>
-        <rd:TableName>instr</rd:TableName>
-        <rd:ObjectDataSourceType>Prover.Model.instr, Prover.Model, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</rd:ObjectDataSourceType>
+        <rd:DataSetName>Prover.Instruments.Data</rd:DataSetName>
+        <rd:TableName>BaseInstrument</rd:TableName>
+        <rd:ObjectDataSourceType>Prover.Instruments.Data.BaseInstrument, Prover.Instruments.Data, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</rd:ObjectDataSourceType>
+      </rd:DataSetInfo>
+    </DataSet>
+    <DataSet Name="Instrument_ItemFile">
+      <Query>
+        <DataSourceName>ProverInstrumentsData1</DataSourceName>
+        <CommandText>/* Local Query */</CommandText>
+      </Query>
+      <Fields>
+        <Field Name="Key">
+          <DataField>Key</DataField>
+          <rd:TypeName>System.Int32</rd:TypeName>
+        </Field>
+        <Field Name="Value">
+          <DataField>Value</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+      </Fields>
+      <rd:DataSetInfo>
+        <rd:DataSetName>Prover.Instruments.Data</rd:DataSetName>
+        <rd:TableName>BaseInstrument</rd:TableName>
+        <rd:ObjectDataSourceSelectMethod>ItemFile</rd:ObjectDataSourceSelectMethod>
+        <rd:ObjectDataSourceType>Prover.Instruments.Data.BaseInstrument, Prover.Instruments.Data, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</rd:ObjectDataSourceType>
       </rd:DataSetInfo>
     </DataSet>
   </DataSets>
