--- a/Prover.Instruments.Search/Views/InstrumentDetails.xaml
+++ b/Prover.Instruments.Search/Views/InstrumentDetails.xaml
@@ -165,15 +165,17 @@
                                                    Converter={StaticResource VisibilityOfBool},
                                                    UpdateSourceTrigger=PropertyChanged}">
                         <Grid>
-                            <DataGrid AutoGenerateColumns="false" ItemsSource="{Binding Instrument.PressureTests, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                            <DataGrid AutoGenerateColumns="false" ItemsSource="{Binding PressureTests, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                                 <DataGrid.Columns>
                                     <DataGridTemplateColumn Header="Fetch">
                                         <DataGridTemplateColumn.CellTemplate>
                                             <DataTemplate>
                                                 <Button Command="{Binding DataContext.fetchPressureCommand,
                                                                           RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
-                                                        CommandParameter="{Binding LevelIndex}"
-                                                        Content="{Binding LevelDescription}" />
+                                                        CommandParameter="{Binding DataContext.PressureLevels,
+                                                                                   RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
+                                                        Content="{Binding DataContext.PressureLevels,
+                                                                          RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}" />
                                             </DataTemplate>
                                         </DataGridTemplateColumn.CellTemplate>
                                     </DataGridTemplateColumn>
